--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -132,7 +132,7 @@ input[type=submit]:hover {
 
 </style>
 </head>
-<body
+<body>
   <div class="heading">
     <h3>Apply Now!</h3>
     <p>Fill out the fields below!</p>
@@ -147,7 +147,7 @@ input[type=submit]:hover {
     <input type="text" id="nationality" name="nationality" placeholder="Your nationality.." required>
 
     <label for="email">Email</label>
-    <input type="email" id="email" name="_replyto" placeholder="Your email address.." required>
+    <input type="text" id="email" name="_replyto" placeholder="Your email address.." required>
 
     <label for="DOB">Date of Birth</label>
     <select name="month">
@@ -311,6 +311,9 @@ input[type=submit]:hover {
 
     <label for="subject">Why do you want to work in China?</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <label for="referrer">Referrer</label>
+    <input type="text" id="referrer" name="referrer" placeholder="Your referrer (if applicable).." required>
 
     <div>
     <label for="resume">Attach Your CV: </label>
