--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -57,15 +57,27 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 16px;
 }
 
-ul {
+.requirements ul {
   list-style: none;
 }
 
-ul li {
+.requirements ul li {
   padding: 10px;
 }
 
-ul li:before {
+.requirements ul li:before {
+  content: '✓';
+}
+
+.desirable ul {
+  list-style: none;
+}
+
+.desirable ul li {
+  padding: 10px;
+}
+
+.desirable ul li:before {
   content: '✓';
 }
 
@@ -154,31 +166,9 @@ ul li:before {
 </style>
 </head>
 
-<body
+<body>
 
-
-  <div class="opportunities">
-  <h2>Opportunities</h2>
-  <div class="card-product">
-  <img src="/icons/ribbon.png">
-  <div class="card-product-infos">
-    <h3>English Language(majority)</h3>
-  </div>
-  </div>
-  <div class="card-product">
-  <img src="/icons/ribbon.png">
-  <div class="card-product-infos">
-    <h3>Music, Arts, Dance, Physical Education, Science (taught in English)</h3>
-  </div>
-  </div>
-  <div class="card-product">
-  <img src="/icons/ribbon.png">
-  <div class="card-product-infos">
-    <h3>French, German, Spanish, Japanese (limited availability)</h3>
-  </div>
-  </div>
-
-  <div class="locations">
+    <div class="locations">
     <h2>Locations</h2>
     <p>We currently have vacancies for positions in public primary, middle and high schools, and also at some private training centres, all over China. Most of our positions are available in Shenzhen, however we also offer positions in Beijing, Shanghai, Guangzhou, Chengdu, Hangzhou, Suzhou, and Ningbo.</p>
   </div>
@@ -209,6 +199,28 @@ ul li:before {
     Hangzhou
   </div>
 </div>
+
+  <div class="opportunities">
+  <h2>Opportunities</h2>
+  <div class="card-product">
+  <img src="/icons/ribbon.png">
+  <div class="card-product-infos">
+    <h3>English Language(majority)</h3>
+  </div>
+  </div>
+  <div class="card-product">
+  <img src="/icons/ribbon.png">
+  <div class="card-product-infos">
+    <h3>Music, Arts, Dance, Physical Education, Science (taught in English)</h3>
+  </div>
+  </div>
+  <div class="card-product">
+  <img src="/icons/ribbon.png">
+  <div class="card-product-infos">
+    <h3>French, German, Spanish, Japanese (limited availability)</h3>
+  </div>
+  </div>
+
 
   <div class="requirements">
     <h2>Requirements</h2>
