bug fixes to deploy

--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -139,7 +139,7 @@ input[type=submit]:hover {
   </div>
 
 <div class="container">
-  <form role="form" id="reused_form" enctype="multipart/form-data"action="https://formspree.io/info@bridge2china.co.uk" method="POST">
+  <form action="https://formspree.io/info@bridge2china.co.uk" method="POST">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" placeholder="Your name.." required>
 
@@ -316,7 +316,7 @@ input[type=submit]:hover {
     <input type="text" id="referrer" name="referrer" placeholder="Your referrer (if applicable).." required>
 
     <div>
-    <label for="resume">Attach Your CV: </label>
+    <label for="resume">Attach Your CV (.pdf or .docx): </label>
 
     <input type="file" name="file" accept=".pdf, .docx">
     </div>
