--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -140,7 +140,7 @@ input[type=submit]:hover {
 
 <div class="container">
   <form action="https://formspree.io/info@bridge2china.co.uk" method="POST">
-    <label for="name">Name</label>
+    <label for="name">Name!!</label>
     <input type="text" id="name" name="name" placeholder="Your name.." required>
 
     <label for="nationality">Nationality</label>
