--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -139,7 +139,7 @@ input[type=submit]:hover {
   </div>
 
 <div class="container">
-  <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
+  <form action="https://formspree.io/info@bridge2china.co.uk" method="POST">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" placeholder="Your name.." required>
 
