--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -17,7 +17,6 @@
 layout: base
 ---
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -57,85 +56,23 @@ input[type=submit]:hover {
   width: 100%;
 }
 
-.heading h3 {
+.header h3 {
   font-weight: bold;
   font-size: 25px;
 }
 
-.heading p {
+.header p {
   font-style: italic;
   font-size: 15px;
-}
-
-/* The container */
-.checkbox {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.checkbox input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #DEDEDE;
-  border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.checkbox:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.checkbox input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.checkbox .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
 }
 
 </style>
 </head>
 <body>
-  <div class="heading">
-    <h3>Apply Now!</h3>
-    <p>Fill out the fields below!</p>
+
+  <div class="header">
+    <h3>Contact Us!</h3>
+    <p>We would love to hear from you!</p>
   </div>
 
 <div class="container">
@@ -143,105 +80,28 @@ input[type=submit]:hover {
     <label for="name">Name</label>
     <input type="text" id="name" name="name" placeholder="Your name.." required>
 
-    <label for="nationality">Nationality</label>
-    <input type="text" id="nationality" name="nationality" placeholder="Your nationality.." required>
+    <label for="number">Phone Number</label>
+    <input type="text" id="number" name="phonenumber" placeholder="Your phone number.." required>
 
     <label for="email">Email</label>
     <input type="text" id="email" name="_replyto" placeholder="Your email address.." required>
 
-    <label for="DOB">Date of Birth</label>
-    <select name="month">
-    <option value="month">Month</option>
-    <option value="january">January</option>
-    <option value="february">February</option>
-    <option value="march">March</option>
-    <option value="april">April</option>
-    <option value="may">May</option>
-    <option value="june">June</option>
-    <option value="july">July</option>
-    <option value="august">August</option>
-    <option value="september">September</option>
-    <option value="october">October</option>
-    <option value="november">November</option>
-    <option value="december">December</option>
-    </select>
-    <select name="days">
-    <option value="days">Days</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-    <option value="11">11</option>
-    <option value="12">12</option>
-    <option value="13">13</option>
-    <option value="14">14</option>
-    <option value="15">15</option>
-    <option value="16">16</option>
-    <option value="17">17</option>
-    <option value="18">18</option>
-    <option value="19">19</option>
-    <option value="20">20</option>
-    <option value="21">21</option>
-    <option value="22">22</option>
-    <option value="23">23</option>
-    <option value="24">24</option>
-    <option value="25">25</option>
-    <option value="26">26</option>
-    <option value="27">27</option>
-    <option value="28">28</option>
-    <option value="29">29</option>
-    <option value="30">30</option>
-    <option value="31">31</option>
-  </select>
-    <select name="years">
-    <option value="years">Years</option>
-    <option value="1964">1964</option>
-    <option value="1965">1965</option>
-    <option value="1966">1966</option>
-    <option value="1967">1967</option>
-    <option value="1968">1968</option>
-    <option value="1969">1969</option>
-    <option value="1970">1970</option>
-    <option value="1971">1971</option>
-    <option value="1972">1972</option>
-    <option value="1973">1973</option>
-    <option value="1974">1974</option>
-    <option value="1975">1975</option>
-    <option value="1976">1976</option>
-    <option value="1977">1977</option>
-    <option value="1978">1978</option>
-    <option value="1979">1979</option>
-    <option value="1980">1980</option>
-    <option value="1981">1981</option>
-    <option value="1982">1982</option>
-    <option value="1983">1983</option>
-    <option value="1984">1984</option>
-    <option value="1985">1985</option>
-    <option value="1986">1986</option>
-    <option value="1987">1987</option>
-    <option value="1988">1988</option>
-    <option value="1989">1989</option>
-    <option value="1990">1990</option>
-    <option value="1991">1991</option>
-    <option value="1992">1992</option>
-    <option value="1993">1993</option>
-    <option value="1994">1994</option>
-    <option value="1995">1995</option>
-    <option value="1996">1996</option>
-    <option value="1997">1997</option>
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="ireland">Ireland</option>
+      <option value="new zealand">New Zealand</option>
+      <option value="south africa">South Africa</option>
+      <option value="uk">UK</option>
+      <option value="usa">USA</option>
+       <option value="other">Other</option>
     </select>
 
-
-
+    <label for="subject">What would you like to contact us about?</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Send">
-
   </form>
 </div>
 
