--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -272,7 +272,7 @@ input[type=submit]:hover {
 
     <label for="checkbox">Program</label>
     <label class="checkbox">English Teacher
-      <input type="checkbox" name="radio" value="radio1" id="english" onclick="myFunction()">
+      <input type="checkbox" name="radio" value="radio1" id="english" onclick="myFunction2()">
       <span class="checkmark"></span>
     </label>
     <label class="checkbox">Subject Teacher
@@ -291,7 +291,7 @@ input[type=submit]:hover {
     <input type="text" id="text1" name="language" placeholder="Enter your TEFL/TESOL qualifications.." style="display:none" required>
 
       <script>
-      function myFunction() {
+      function myFunction2() {
       var checkBox = document.getElementById("english");
       var text = document.getElementById("text1");
       if (checkBox.checked == true){
