--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -248,7 +248,7 @@ input[type=submit]:hover {
       <span class="checkmark"></span>
     </label>
 
-    <input type="text" id="text" name="language" placeholder="Enter your native language.." style="display:none" required>
+    <input type="text" id="text" name="language" placeholder="Enter your native language.." style="display:none">
 
     <script>
       function myFunction1() {
@@ -288,7 +288,7 @@ input[type=submit]:hover {
       <span class="checkmark"></span>
     </label>
 
-    <input type="text" id="text1" name="language" placeholder="Enter your TEFL/TESOL qualifications.." style="display:none" required>
+    <input type="text" id="text1" name="language" placeholder="Enter your TEFL/TESOL qualifications.." style="display:none">
 
       <script>
       function myFunction2() {
