--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -200,7 +200,7 @@ input[type=submit]:hover {
     <option value="31">31</option>
   </select>
     <select name="years">
-    <option value="years">Years</option>
+    <option value="years">Year</option>
     <option value="1964">1964</option>
     <option value="1965">1965</option>
     <option value="1966">1966</option>
@@ -310,15 +310,15 @@ input[type=submit]:hover {
     </select>
 
     <label for="subject">Why do you want to work in China?</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <textarea id="subject" name="Why China?" placeholder="Write something.." style="height:200px"></textarea>
 
     <label for="referrer">Referrer</label>
-    <input type="text" id="referrer" name="referrer" placeholder="Your referrer (if applicable).." required>
+    <input type="text" id="referrer" name="referrer" placeholder="Your referrer (if applicable)..">
 
     <div>
-    <label for="resume">Attach Your CV (.pdf or .docx): </label>
+    <label for="resume">Attach Your CV (.pdf, .doc, or .docx): </label>
 
-    <input type="file" name="file" accept=".pdf, .docx">
+    <input type="file" name="file" accept=".pdf, .doc, .docx">
     </div>
 
     <input type="submit" value="Send">
