--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -76,9 +76,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .cards {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  height: 350px;
 }
 
 .card-flex {
