--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -79,7 +79,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
-  height: 350px;
+  height: 100%;
+  width: 100%;
+
 }
 
 .card-flex {
