--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -39,6 +39,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .container {
   width: 100%;
+  height: 100%;
   margin: auto;
 }
 
@@ -76,12 +77,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-  height: 100%;
-  width: 100%;
-
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .card-flex {
