--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -68,7 +68,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .card {
   width: 275px;
-  height:600px;
+  height:100%;
   border-radius: 3px;
   box-shadow: 0 0 5px rgb(230,230,230);
   text-align: center;
@@ -80,6 +80,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+  height: 100%;
+
 }
 
 .card-flex {
