--- a/_layouts/recruitment.html
+++ b/_layouts/recruitment.html
@@ -60,35 +60,35 @@ body {font-family: Arial, Helvetica, sans-serif;}
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .collapser {
-    grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .collapser {
-    grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .collapser {
-    grid-template-columns: 1fr 1fr;
+    width: 100%;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .collapser {
-    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .collapser {
-    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
   }
 }
 
