--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -163,6 +163,39 @@ body {font-family: Arial, Helvetica, sans-serif;}
   }
 }
 
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .opportunities {
+    width: 100%;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .opportunities {
+    width: 100%;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .opportunities {
+    width: 100%;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .opportunities {
+    width: 100%;
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .opportunities {
+    width: 100%;
+}
+
 </style>
 </head>
 
