--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -132,6 +132,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
     grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
@@ -139,6 +140,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 @media (min-width: 576px) {
   .cards {
     grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
@@ -146,6 +148,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 @media (min-width: 768px) {
   .cards {
     grid-template-columns: 1fr 1fr;
+    width: 100%;
   }
 }
 
@@ -153,6 +156,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 @media (min-width: 992px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
   }
 }
 
@@ -160,6 +164,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 @media (min-width: 1200px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
   }
 }
 
