--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -128,6 +128,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
   font-style: sans-serif;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
@@ -210,6 +216,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
     <h2>Locations</h2>
     <p>We currently have vacancies for positions in public primary, middle and high schools, and also at some private training centres, all over China. Most of our positions are available in Shenzhen, however we also offer positions in Beijing, Shanghai, Guangzhou, Chengdu, Hangzhou, Suzhou, and Ningbo.</p>
   </div>
+<div class="container">
   <div class="cards">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/beijing.jpg)">
     Beijing
@@ -232,6 +239,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/chengdu.jpg">
     Chengdu
   </div>
+</div>
 
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/hangzhou.jpg)">
     Hangzhou
