--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -91,11 +91,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 20px;
 }
 
-.card-category:hover {
+.card:hover {
   opacity: 0.8;
 }
 
-.card-category {
+.card {
   color: white;
   text-align: center;
   padding: 50px;
@@ -218,29 +218,29 @@ body {font-family: Arial, Helvetica, sans-serif;}
   </div>
 <div class="container">
   <div class="cards">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/beijing.jpg)">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/beijing.jpg)">
     Beijing
   </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/shenzhen.jpg">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/shenzhen.jpg">
     Shenzhen
   </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/shanghai.jpg)">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/shanghai.jpg)">
     Shanghai
   </div>
 </div>
 
  <div class="cards">
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/guangzhou.jpg)">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/guangzhou.jpg)">
     Guangzhou
   </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/chengdu.jpg">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/chengdu.jpg">
     Chengdu
   </div>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/hangzhou.jpg)">
+  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(/icons/hangzhou.jpg)">
     Hangzhou
   </div>
   </div>
