--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -317,6 +317,7 @@ input[type=submit]:hover {
 
     <div>
     <label for="resume">Attach Your CV (.pdf, .doc, or .docx): </label>
+    </div>
 
     <input type="file" name="file" accept=".pdf, .doc, .docx">
     </div>
