--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -149,7 +149,7 @@ input[type=submit]:hover {
     <label for="email">Email</label>
     <input type="text" id="email" name="_replyto" placeholder="Your email address.." required>
 
-    <label for="DOB">Date of Birth</label>
+    Date of Birth<br>
     <select name="month">
     <option value="month">Month</option>
     <option value="january">January</option>
@@ -235,7 +235,7 @@ input[type=submit]:hover {
     <option value="1995">1995</option>
     <option value="1996">1996</option>
     <option value="1997">1997</option>
-    </select>
+    </select><br><br>
 
 
     <label for="checkbox">Native Language</label>
