--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -151,9 +151,10 @@ input[type=submit]:hover {
 
     <label for="start">Date of Birth</label>
     <input type="date" id="Date of Birth" name="Date of Birth"
-       value="2018-07-22"
+       value="2018-07-22" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
        min="1964-01-01" max="1997-01-01">
-
+   <div>
+   </div>
 
     <label for="checkbox">Native Language</label>
     <label class="checkbox">English
