--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -130,6 +130,10 @@ input[type=submit]:hover {
   background: white;
 }
 
+.padding {
+  padding: 10px;
+}
+
 </style>
 </head>
 <body>
@@ -150,10 +154,13 @@ input[type=submit]:hover {
     <input type="text" id="email" name="_replyto" placeholder="Your email address.." required>
 
     <label for="start">Date of Birth</label>
+    <div>
     <input type="date" id="Date of Birth" name="Date of Birth"
        value="2018-07-22" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
        min="1964-01-01" max="1997-01-01">
-   <div>
+   </div>
+
+   <div class="padding">
    </div>
 
     <label for="checkbox">Native Language</label>
