--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -257,7 +257,7 @@ Looking for a new experience or new career?</p>
         <p>Teachers are given numerous long weekends and long school holidays (usually around 7 weeks in Summer and 5 weeks in Winter). Combined with sweet deals from Asia's budget airlines, this is a recipe to tick many exotic destinations off of the bucket list!</p>
         </div>
         <div class="card">
-        <img src="/icons/language.png" alt="Chinese">
+        <img src="/icons/study.png" alt="Chinese">
         <h4>Learn Chinese</h4>
         <p>One can improve their marketability by learning the language with the most native speakers on earth!</p>
         </div>
