--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -156,8 +156,8 @@ input[type=submit]:hover {
     <label for="start">Date of Birth</label>
     <div>
     <input type="date" id="Date of Birth" name="Date of Birth"
-       value="2018-07-22" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
-       min="1964-01-01" max="1997-01-01">
+       value="2019-01-01" required pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
+       min="1964-01-01" max="1997-01-01" placeholder="2019-01-01">
    </div>
 
    <div class="padding">
