--- a/_layouts/opportunities.html
+++ b/_layouts/opportunities.html
@@ -136,7 +136,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
-  .cards {
+  .container {
     grid-template-columns: 1fr;
     width: 100%;
   }
@@ -144,7 +144,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  .cards {
+  .container {
     grid-template-columns: 1fr;
     width: 100%;
   }
@@ -152,7 +152,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .cards {
+  .container {
     grid-template-columns: 1fr 1fr;
     width: 100%;
   }
@@ -160,7 +160,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  .cards {
+  .container {
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
   }
@@ -168,7 +168,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .cards {
+  .container {
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
   }
