--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -245,6 +245,7 @@ input[type=submit]:hover {
     </div>
 
     <input type="file" name="file" accept=".pdf, .doc, .docx">
+    <div>
     </div>
 
     <input type="submit" value="Send">
