tiny bug part 2

--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -245,7 +245,8 @@ input[type=submit]:hover {
     </div>
 
     <input type="file" name="file" accept=".pdf, .doc, .docx">
-    <div>
+
+    <div class="padding">
     </div>
 
     <input type="submit" value="Send">
